# thumbnail-auto-crop

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
